FEATBL-1771 Fix: GWT compilation issue